--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,35 @@ Homestead.yaml
 npm-debug.log
 Thumbs.db
 yarn-error.log
+
+# Ignore all markdown documentation files
+*.md
+README.md
+CHANGELOG.md
+CART-*.md
+CHECKOUT-*.md
+DATABASE-*.md
+DUPLICATE-*.md
+FINAL-*.md
+HOMEPAGE-*.md
+IMAGE-*.md
+ORDER-*.md
+PRODUCT-*.md
+ROUTE-*.md
+SEARCH-*.md
+CATEGORY-*.md
+
+# Additional Laravel files
+/database/database.sqlite
+/bootstrap/cache/*.php
+!/bootstrap/cache/.gitkeep
+/storage/framework/sessions/*
+!/storage/framework/sessions/.gitkeep
+/storage/framework/cache/*
+!/storage/framework/cache/.gitkeep
+/storage/framework/views/*
+!/storage/framework/views/.gitkeep
+/storage/logs/*.log
+*.bak
+*.backup
+*.tmp
